# web3

./: .gitignore  Cargo.toml  go.mod
grammar/go/: 10_task_framework.go  11_task_orm.go  12_task_algorithm.go  2_guessing_game.go  3_basic.go  4_pointers.go  5_exercises.go  6_advanced_features.go  7_task.go  8_task.go  9_task_queue.go  go.mod  learning_tasks.md
grammar/rust/: Cargo.toml  learning_tasks.md
grammar/rust/src/: 2_guessing_game.rs  3_basic.rs  4_references.rs  5_exercises.rs  6_advanced_features.rs  7_task_basic.rs  8_task_mediate.rs  8_task_mediate_simple.rs  9_data_structure.rs
grammar/ts/: 2_guessing_game.ts  3_basic.ts  4_references.ts  5_exercises.ts  6_advanced_features.ts  learning_tasks.md  package-lock.json  package.json  tsconfig.json
projects/favorites/: go.mod
projects/favorites/client/: favorite.go
projects/favorites/favorite/: Anchor.toml  package-lock.json
projects/favorites/favorite/programs/favorite/: Cargo.toml
projects/favorites/favorite/programs/favorite/src/: lib.rs
projects/favorites/favorite/tests/: favorite.ts
projects/transfer/chain/: Anchor.toml  Cargo.toml  package-lock.json
projects/transfer/chain/programs/chain/: Cargo.toml
projects/transfer/chain/programs/chain/src/: lib.rs
projects/transfer/chain/tests/: chain.ts
projects/transfer/client/: go.mod  main.go
projects/vote/voting/: Anchor.toml
projects/vote/voting/programs/voting/src/: lib.rs
