[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }


[[bin]]
name = "2_guessing_game"
path = "src/2_guessing_game.rs"

[[bin]]
name = "3_basic"
path = "src/3_basic.rs"

[[bin]]
name = "4_references"
path = "src/4_references.rs"

[[bin]]
name = "5_exercises"
path = "src/5_exercises.rs"

[[bin]]
name = "6_advanced_features"
path = "src/6_advanced_features.rs"

[[bin]]
name = "7_task_basic"
path = "src/7_task_basic.rs"

[[bin]]
name = "8_task_mediate_simple"
path = "src/8_task_mediate_simple.rs"

[[bin]]
name = "8_task_mediate"
path = "src/8_task_mediate.rs"

[[bin]]
name = "9_data_structure"
path = "src/9_data_structure.rs"